Sivu käännetty englanniksi paitsi apin tuomat tekstit

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
     <title>ElokuvaSovellus</title>
   </head>
   <body>
-    <noscript>Sinun tulee sallia JavaScript käyttääksesi tätä sovellusta.</noscript>
+    <noscript>JavaScript is needed for the app to function.</noscript>
     <div id="root"></div>
   </body>
 </html>
